# personnal_projects

./: README.md
dj_postgres_skeleton/: .env.example  Dockerfile  docker-compose.yaml  lintall.sh  manage.py  pylintrc  pyproject.toml  tox.ini
dj_postgres_skeleton/core/models/: base_model.py
dj_postgres_skeleton/dj_postgres_skeleton/: asgi.py  urls.py  wsgi.py
dj_postgres_skeleton/dj_postgres_skeleton/settings/: __init__.py  databases.py  django.py
